--- a/src/ItemDetail/ItemDetail.css
+++ b/src/ItemDetail/ItemDetail.css
@@ -1,3 +1,21 @@
 .ItemDetail-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   flex: 1;
+}
+
+.upvote-button {
+  padding: 5px;
+  border: solid 1px grey;
+  border-radius: 3px;
+  background-color: #6FA1FB;
+  color: white;
+  width: 68px;
+  cursor: pointer;
+}
+
+.upvote-button:hover {
+  background-color: #4D80D9;
 }
