--- a/src/NewItemForm/NewItemForm.css
+++ b/src/NewItemForm/NewItemForm.css
@@ -1,5 +1,8 @@
 .item-form-container {
   display: flex;
+  flex: 1;
+  flex-direction: column;
   align-items: center;
-  justify-content: center
+  justify-content: space-around;
+  padding: 50px 0;
 }
