--- a/src/NewItemForm/NewItemForm.css
+++ b/src/NewItemForm/NewItemForm.css
@@ -3,6 +3,15 @@
   flex: 1;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   padding: 50px 0;
+}
+
+.flavor-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #eee;
+  padding: 20px;
 }
