--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -9,9 +11,11 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 15%;
   padding: 20px;
   color: white;
+  position: fixed;
+  width: 100%;
 }
 
 .App-intro {
@@ -24,6 +28,7 @@
 
 .App-content-container {
   display: flex;
+  height: 100%;
 }
 
 @keyframes App-logo-spin {
@@ -47,8 +52,8 @@
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
   border-radius: 50%;
   position: fixed;
-  bottom: 20%;
-  right: 20%;
+  bottom: 40px;
+  right: 40px;
   transition: 0.25s;
   cursor: pointer;
   text-decoration: none;
