--- a/src/InventoryList/InventoryList.css
+++ b/src/InventoryList/InventoryList.css
@@ -2,6 +2,8 @@
   flex: 0.5;
   overflow: scroll;
   padding-bottom: 10%;
+  padding-right: 10px;
+  background-color: #efefef;
 }
 
 .inventory-container {
@@ -10,6 +12,29 @@
   transition: 0.3s;
   cursor: pointer;
   display: block;
+  text-decoration: none;
+  position: relative;
+}
+
+.item-remove {
+  font-size: 24px;
+  position: absolute;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  top: 5px;
+  right: 10px;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.item-remove:hover {
+  background-color: brown;
+  color: #eee;
+}
+
+.inventory-container:hover .item-remove{
+  opacity: 1;
 }
 
 .inventory-container:hover {
