--- a/backend/inventory-app/views/layout.ejs
+++ b/backend/inventory-app/views/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/main.e50c47af.css">
     <!--STYLES END-->
   </head>
 
@@ -89,6 +90,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/main.20181783.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
