--- a/backend/inventory-app/views/homepage.ejs
+++ b/backend/inventory-app/views/homepage.ejs
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" href="/favicon.ico">
   <title>React App</title>
-  <link href="../assets/styles/main.e50c47af.css" rel="stylesheet">
+  <link href="/assets/styles/main.e50c47af.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="../assets/js/main.20181783.js"></script>
+  <script type="text/javascript" src="/assets/js/main.5cea3433.js"></script>
 </body>
 
 </html>
