latest built files. Moved script and css to layout.ejs.

--- a/backend/inventory-app/views/layout.ejs
+++ b/backend/inventory-app/views/layout.ejs
@@ -30,6 +30,8 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link href="/styles/main.e50c47af.css" rel="stylesheet">
+
     <!--STYLES END-->
   </head>
 
@@ -89,6 +91,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script type="text/javascript" src="/js/main.a0736d4a.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
