--- a/backend/inventory-app/views/layout.ejs
+++ b/backend/inventory-app/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+    <title><%=typeof title == 'undefined' ? 'Inventory Manager' : title%></title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/main.e50c47af.css">
     <!--STYLES END-->
     <link rel="stylesheet" href="/styles/main.e50c47af.css">
   </head>
@@ -61,7 +62,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
@@ -90,6 +91,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/main.a0736d4a.js"></script>
     <!--SCRIPTS END-->
     <script src="/js/main.a0736d4a.js"></script>
   </body>
